# ansible-book

./: .readthedocs.yaml  README.md  ansible.cfg  hosts.ini  hosts.yaml  pyproject.toml
docs/source/: conf.py  index.md
docs/source/01_introduction/: 01_intro.md  index.md
docs/source/book/: config-file.md  gns3-lab.md  installation.md  introduction.md  inventory.md
docs/source/ch-01/: index.md  introduction.md  inventory.md
