[tool.poetry]
name = "ansible book"
version = "1.0"
description = "Ansible Quick Start Guide"
authors = ["syed asif <sydasif78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Sphinx = "^5.3.0"
rst-to-myst = "^0.3.2"
myst-parser = "^0.18.1"
sphinx-autobuild = "^2021.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
