[tool.poetry]
name = "ansible book"
version = "1.0"
description = "Ansible Quick Start Guide"
authors = ["syed asif <sydasif78@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
Sphinx = "^5.3.0"
myst-parser = "^0.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
