[tool.poetry]
name = "ansible book"
version = "1.0"
description = "Ansible Quick Start Guide"
authors = ["syed asif <sydasif78@gmail.com>"]
readme = "README.md"

[project.optional.dependencies]

doc = [
    "Sphinx~=4.5.0"
    "myst-parser=0.18.1",
]    


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
